--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ project.tasks['check'].dependsOn integration
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: fis-cos-api"
+    property "sonar.projectName", "fis :: fis-cos-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:fis-cos-api"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
   }
