--- a/build.gradle
+++ b/build.gradle
@@ -501,6 +501,26 @@ bootJar {
   }
 }
 
+functional {
+  doFirst() {
+    if (System.getenv("OAUTH2_CLIENT_SECRET") == null) {
+      println("Loading secrets from vault")
+
+      systemProperty 'IDAM_API_BASEURL', 'https://idam-api.aat.platform.hmcts.net'
+      systemProperty 'UK_GOV_NOTIFY_API_KEY', getVaultSecret('uk-gov-notify-api-key')
+      systemProperty 'S2S_SECRET', getVaultSecret('s2s-secret-cos-api')
+      //systemProperty 'IDAM_CASEWORKER_USERNAME', getVaultSecret('idam-caseworker-username')
+      //systemProperty 'IDAM_CASEWORKER_PASSWORD', getVaultSecret('idam-caseworker-password')
+      systemProperty 'IDAM_SYSTEM_UPDATE_USERNAME', getVaultSecret('idam-system-user-name')
+      systemProperty 'IDAM_SYSTEM_UPDATE_PASSWORD', getVaultSecret('idam-system-user-password')
+      systemProperty 'IDAM_SOLICITOR_USERNAME', getVaultSecret('idam-solicitor-username')
+      systemProperty 'IDAM_SOLICITOR_PASSWORD', getVaultSecret('idam-solicitor-password')
+      systemProperty 'OAUTH2_CLIENT_SECRET', getVaultSecret('idam-secret')
+      systemProperty 'APP_INSIGHTS_KEY', getVaultSecret('AppInsightsInstrumentationKey')
+    }
+  }
+}
+
 generateTypeScript {
   jsonLibrary = 'jackson2'
   classPatterns = [
@@ -520,6 +540,110 @@ generateTypeScript {
     }
   }
 }
+
+ccd {
+  configDir = file('build/definitions')
+}
+
+tasks.register('stopCosApiContainer') {
+  group = 'ccd tasks'
+
+  doFirst {
+    exec {
+      executable "sh"
+      args "-c", "docker stop fis-cos-api || exit 0"
+    }
+  }
+}
+
+def reloadCcd = tasks.register('reloadCcd') {
+  group = 'ccd tasks'
+  doLast {
+    exec {
+      file('../.env').readLines().each() {
+        def (key, value) = it.tokenize('=')
+        environment key, value
+      }
+      commandLine './bin/process-and-import-ccd-definition.sh'
+    }
+    exec {
+      file('../.env').readLines().each() {
+        def (key, value) = it.tokenize('=')
+        environment key, value
+      }
+      commandLine 'docker-compose', '-f', '../docker-compose.yml', 'up', '--build', '-d', 'adoption-cos-api'
+    }
+  }
+}
+
+reloadCcd.configure {
+  dependsOn assemble, generateCCDConfig
+}
+
+generateCCDConfig.dependsOn stopCosApiContainer
+
+project.ext {
+  pacticipant = 'sscs_tribunalsCaseApi'
+  pacticipantVersion = getCheckedOutGitCommitHash()
+}
+
+task runAndPublishConsumerPactTests(type: Test){
+  logger.lifecycle("Runs pact Tests")
+  testClassesDirs = sourceSets.smokeTest.output.classesDirs
+  classpath = sourceSets.smokeTest.runtimeClasspath
+
+}
+
+runAndPublishConsumerPactTests.dependsOn contract
+
+runAndPublishConsumerPactTests.finalizedBy pactPublish
+
+pact {
+  broker {
+    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
+  }
+  publish {
+    pactDirectory = 'pacts'
+    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
+    version = project.pacticipantVersion
+  }
+}
+
+static def getCheckedOutGitCommitHash() {
+  'git rev-parse --verify --short HEAD'.execute().text.trim()
+}
+task loadEnvSecrets() {
+  doLast {
+    if (!project.file('./.aat-env').exists()) {
+      new ByteArrayOutputStream().withStream { os ->
+        exec {
+          commandLine 'az', 'keyvault', 'secret', 'show', '--vault-name', 'nfdiv-aat', '-o', 'tsv', '--query', 'value', '--name', 'nfdiv-case-api-dot-env'
+          standardOutput = os
+        }
+        project.file('./.aat-env').write(new String(os.toString().replace('\n', '').decodeBase64(), java.nio.charset.StandardCharsets.UTF_8))
+      }
+    }
+  }
+}
+
+task buildCCDXlsx(type: Exec, dependsOn: generateCCDConfig) {
+  group 'ccd tasks'
+  commandLine './bin/ccd-build-definition.sh'
+  inputs.dir layout.buildDirectory.dir('definitions')
+  outputs.dir layout.buildDirectory.dir('ccd-config')
+}
+
+/*bootWithCCD {
+  dependsOn(buildCCDXlsx, loadEnvSecrets)
+  doFirst() {
+    project.file('./.aat-env').readLines().each() {
+      def index = it.indexOf("=")
+      def key = it.substring(0, index)
+      def value = it.substring(index + 1)
+      environment key, value
+    }
+  }
+}*/
 
 // Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
 rootProject.tasks.named("processSmokeTestResources") {
