--- a/build.gradle
+++ b/build.gradle
@@ -456,7 +456,7 @@ dependencies {
 
 }
 
-mainClassName = 'uk.gov.hmcts.reform.fis.Application'
+mainClassName = 'uk.gov.hmcts.reform.cosapi.Application'
 
 ext.getVaultSecret = { String secretName ->
   new ByteArrayOutputStream().withStream { os ->
