--- a/charts/fis-cos-api/values.yaml
+++ b/charts/fis-cos-api/values.yaml
@@ -17,10 +17,10 @@ java:
   keyVaults:
     fis:
       secrets:
-        - idam-system-user-name
+        - name: idam-system-user-name
           alias: IDAM_SYSTEM_UPDATE_USERNAME
-        - idam-system-user-password
+        - name: idam-system-user-password
           alias: IDAM_SYSTEM_UPDATE_PASSWORD
-        - s2s-secret-fis-cos-api
+        - name: s2s-secret-fis-cos-api
           alias: S2S_SECRET
-        - AppInsightsInstrumentationKey
+        - name: AppInsightsInstrumentationKey
