ISDB-112: Added DEFINITION_STORE_URL_BASE url

--- a/charts/fis-cos-api/Chart.yaml
+++ b/charts/fis-cos-api/Chart.yaml
@@ -10,3 +10,8 @@ dependencies:
   - name: java
     version: 3.7.6
     repository: '@hmctspublic'
+  - name: ccd
+    version: 6.0.0
+    repository: '@hmctspublic'
+    tags:
+        - ccd-idam-pr
