--- a/charts/fis-cos-api/values.yaml
+++ b/charts/fis-cos-api/values.yaml
@@ -1,3 +1,12 @@
+nodejs:
+  applicationPort: 3000
+idam-pr:
+  enabled: false
+xui-webapp:
+  enabled: false
+tags:
+  ccd-pr: false
+
 java:
   applicationPort: 8099
   image: 'hmctspublic.azurecr.io/fis/cos-api:latest'
