feat: align build.gradle with fis-bulk-scan-api

--- a/build.gradle
+++ b/build.gradle
@@ -54,9 +54,9 @@ sourceSets {
     java {
       compileClasspath += main.output
       runtimeClasspath += main.output
-      srcDir file('src/functionalTest/java')
+      srcDir file('src/smokeTest/java')
     }
-    resources.srcDir file('src/functionalTest/resources')
+    resources.srcDir file('src/smokeTest/resources')
   }
 
   integrationTest {
@@ -81,7 +81,7 @@ sourceSets {
 idea {
   module {
     testSourceDirs += file('src/integrationTest/java')
-    testSourceDirs += file('src/functionalTest/java')
+    testSourceDirs += file('src/smokeTest/java')
   }
 }
 
@@ -122,9 +122,10 @@ test {
 task functional(type: Test) {
   description = "Runs functional tests"
   group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
+  testClassesDirs = sourceSets.smokeTest.output.classesDirs
+  classpath = sourceSets.smokeTest.runtimeClasspath
   finalizedBy(aggregate)
+  failFast = true
 }
 
 task integration(type: Test) {
@@ -137,9 +138,10 @@ task integration(type: Test) {
 
 task smoke(type: Test) {
   description = "Runs Smoke Tests"
-  setTestClassesDirs(sourceSets.functionalTest.output.classesDirs)
-  setClasspath(sourceSets.functionalTest.runtimeClasspath)
+  setTestClassesDirs(sourceSets.smokeTest.output.classesDirs)
+  setClasspath(sourceSets.smokeTest.runtimeClasspath)
   include "uk/gov/hmcts/reform/cosapi/smoke/**"
+  failFast = true
 }
 
 task highLevelDataSetup(type: JavaExec) {
@@ -166,7 +168,7 @@ checkstyle {
 
 pmd {
   toolVersion = "6.41.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
+  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest, sourceSets.smokeTest]
   reportsDir = file("$project.buildDir/reports/pmd")
   // https://github.com/pmd/pmd/issues/876
   ruleSets = []
