--- a/charts/fis-cos-api/values.preview.template.yaml
+++ b/charts/fis-cos-api/values.preview.template.yaml
@@ -14,7 +14,7 @@ java:
       secrets:
         - name: uk-gov-notify-api-key
           alias: UK_GOV_NOTIFY_API_KEY
-        - name: s2s-secret-fis-cos-api
+        - name: s2s-secret
           alias: S2S_SECRET
         - name: idam-secret
           alias: IDAM_CLIENT_SECRET
