--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -79,7 +79,7 @@ idam:
   s2s-auth:
     url: ${SERVICE_AUTH_PROVIDER_URL:http://localhost:4552}
     secret: ${S2S_SECRET:AAAAAAAAAAAAAAAA}
-    microservice: ds_ui
+    microservice: fis_cos_api
   api:
     url: ${IDAM_API_BASEURL:http://localhost:5000}
   systemupdate:
