modified the casytypeofapplication

--- a/src/integrationTest/resources/application.yaml
+++ b/src/integrationTest/resources/application.yaml
@@ -57,10 +57,8 @@ caseinfo:
         updateEvent: citizen-prl-update-dss-application
         submitEvent: citizen-prl-submit-dss-application
       caseTypeOfApplication:
-        - C100
-        - FL401
-        - FL403
-        - C43
+        - FMPO
+        - FGM
     - caseType: ADOPTION
       jurisdiction: ADOPTION
       eventIds:
@@ -68,6 +66,4 @@ caseinfo:
         updateEvent: citizen-adop-update-dss-application
         submitEvent: citizen-adop-submit-dss-application
       caseTypeOfApplication:
-        - A58
-        - A100
-        - A200
+        - RELADOP
