feat: update yaml to include case types (ISDB-248)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -110,6 +110,8 @@ caseinfo:
         - FL401
         - FL403
         - C43
+        - FMPO
+        - FGM
     - caseType: ADOPTION
       jurisdiction: ADOPTION
       eventIds:
