--- a/src/smokeTest/resources/application.yaml
+++ b/src/smokeTest/resources/application.yaml
@@ -29,9 +29,9 @@ runs-locally: ${RUNS_LOCALLY:true}
 #If you use a database then uncomment below lines and update db properties accordingly
 spring:
   config:
-    import: "optional:configtree:/mnt/secrets/fis/"
+    import: "optional:configtree:/mnt/secrets/sptribs/"
   application:
-    name: Fis Cos API
+    name: sptribs dss backend API
   main:
     allow-bean-definition-overriding: true
   mvc:
