--- a/charts/fis-cos-api/Chart.yaml
+++ b/charts/fis-cos-api/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
 appVersion: "1.0"
-description: A Helm chart for fis-cos-api App
-name: fis-cos-api
-home: https://github.com/hmcts/fis-cos-api
+description: A Helm chart for sptribs-dss-backend App
+name: sptribs-dss-backend
+home: https://github.com/hmcts/sptribs-dss-backend
 version: 0.0.9
 maintainers:
-  - name: HMCTS fis team
+  - name: HMCTS sptribs team
 dependencies:
   - name: java
     version: 3.7.8
