--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,9 @@ springdoc:
 #If you use a database then uncomment below lines and update db properties accordingly
 spring:
   config:
-    import: "optional:configtree:/mnt/secrets/fis/"
+    import: "optional:configtree:/mnt/secrets/sptribs/"
   application:
-    name: Fis Cos API
+    name: sptribs dss backend API
   main:
     allow-bean-definition-overriding: true
   mvc:
@@ -83,7 +83,7 @@ idam:
   s2s-auth:
     url: ${SERVICE_AUTH_PROVIDER_URL:http://rpe-service-auth-provider-aat.service.core-compute-aat.internal}
     secret: ${S2S_SECRET:XXXXXXXX}
-    microservice: fis_cos_api
+    microservice: sptribs_dss_backend
   api:
     url: ${IDAM_API_BASEURL:http://localhost:5000}
   systemupdate:
