--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -16,9 +16,9 @@ springdoc:
 
 spring:
   config:
-    import: "optional:configtree:/mnt/secrets/fis/"
+    import: "optional:configtree:/mnt/secrets/sptribs/"
   application:
-    name: Fis Cos API
+    name: sptribs dss backend API
   main:
     allow-bean-definition-overriding: true
   mvc:
@@ -43,7 +43,7 @@ idam:
   s2s-auth:
     url: ${SERVICE_AUTH_PROVIDER_URL:http://localhost:4552}
     secret: ${S2S_SECRET:AAAAAAAAAAAAAAAA}
-    microservice: fis_cos_api
+    microservice: sptribs_dss_backend
   api:
     url: ${IDAM_API_BASEURL:http://localhost:5000}
   systemupdate:
