Raising test PR

--- a/build.gradle
+++ b/build.gradle
@@ -680,19 +680,19 @@ task contract(type: Test, description: 'Runs the consumer Pact tests.', group: '
 //  classpath = sourceSets.contractTest.runtimeClasspath
 //}
 
-runAndPublishConsumerPactTests.dependsOn contract
+//runAndPublishConsumerPactTests.dependsOn contract
 
-runAndPublishConsumerPactTests.finalizedBy pactPublish
+//runAndPublishConsumerPactTests.finalizedBy pactPublish
 
-project.ext {
-  pactVersion = getCheckedOutGitCommitHash()
-}
+//project.ext {
+//  pactVersion = getCheckedOutGitCommitHash()
+//}
 
-pact {
-  publish {
-    pactDirectory = 'pacts'
-    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
-    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
-    version = project.pactVersion
-  }
-}
+//pact {
+//  publish {
+//    pactDirectory = 'pacts'
+//    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
+//    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
+//    version = project.pactVersion
+//  }
+//}
