ST-947 Replace Private Law references
Replace references to Private Law jurisdiction/case types
with ones for CIC.  Change local variable names, files
and test cases accordingly.

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -62,20 +62,11 @@ document_management:
 
 caseinfo:
   apps:
-    - caseType: PRLAPPS
-      jurisdiction: PRIVATELAW
+    - caseType: CriminalInjuriesCompensation
+      jurisdiction: ST_CIC
       eventIds:
-        createEvent: citizen-prl-create-dss-application
-        updateEvent: citizen-prl-update-dss-application
-        submitEvent: citizen-prl-submit-dss-application
+        createEvent: citizen-cic-create-dss-application
+        updateEvent: citizen-cic-update-dss-application
+        submitEvent: citizen-cic-submit-dss-application
       caseTypeOfApplication:
-        - FMPO
-        - FGM
-    - caseType: ADOPTION
-      jurisdiction: ADOPTION
-      eventIds:
-        createEvent: citizen-adop-create-dss-application
-        updateEvent: citizen-adop-update-dss-application
-        submitEvent: citizen-adop-submit-dss-application
-      caseTypeOfApplication:
-        - RELADOP
+        - CIC
