ST-926 Configure Mental Health jurisdiction/case type
This is required as a temporary work around for creating
cases in DSS, due to the conflict between DSS and case
API for CIC.

--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -76,3 +76,11 @@ caseinfo:
         submitEvent: citizen-cic-submit-dss-application
       caseTypeOfApplication:
         - CIC
+    - caseType: MentalHealth
+      jurisdiction: ST_MH
+      eventIds:
+        createEvent: citizen-mh-create-dss-application
+        updateEvent: citizen-mh-update-dss-application
+        submitEvent: citizen-mh-submit-dss-application
+      caseTypeOfApplication:
+        - MH
